# kge

./: .gitignore  CMakeLists.txt  CodeOfConduct.md  Contributing.md  Manual pybox2D.md  README.md  SandBox.cpp  __init__.py  build.py  engine.py  imgui.ini  premake5.lua  requirements.txt  setup.py
ECS/: README.md  sample.cpp  test.cpp
KGE/src/: KGE.h  headers.cpp  headers.h
KGE/src/KGE/: Base.cpp  Base.h  Engine.cpp  Engine.h
KGE/src/KGE/Core/: Component.cpp  Component.h  ComponentManager.h  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Event.cpp  Event.h  Events.h  Hasher.cpp  Hasher.h  Layer.h  Log.cpp  Log.h  Scene.cpp  Scene.h  ScriptManager.cpp  ScriptManager.h  System.cpp  System.h
KGE/src/KGE/Events/: Event.cpp  Event.h  Events.h
KGE/src/KGE/Graphics/: Components.h  DebugManager.cpp  DebugManager.h  Events.h  ImguiBuild.cpp  Renderer.cpp  Renderer.h  Window.cpp  Window.h
KGE/src/KGE/Graphics/LowLevel/: Buffer.cpp  Buffer.h  GLObject.h  RenderAPI.cpp  RenderAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
KGE/src/KGE/Inputs/: Input.cpp  Input.h  KeyCodes.h  KeyEvents.h  MouseCodes.h  MouseEvents.h
KGE/src/KGE/Physics/: PhysicsManager.cpp  PhysicsManager.h
KGE/src/KGE/Utils/: Color.h  K_Allocator.cpp  K_Allocator.h  K_Random.h  K_Timer.cpp  K_Timer.h  Log.cpp  Log.h  Math.cpp  Math.h  TaskScheduler.h
SandBox/: SandBox.cpp
SandBox/assets/shaders/: Texture.shader
V8SandBox/: main.cpp  main.h
audio/: audio_manager.py  audio_source.py  events.py  sound.py
clocks/: updater.py
core/: behavior_manager.py  behaviour.py  camera.py  component.py  component_system.py  constants.py  entity.py  entity_manager.py  event_dispatcher.py  eventlib.py  events.py  exceptions.py  logger.py  preferences.py  scene.py  service.py  service_provider.py  system.py  transform.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  getting-started.doctree  index.doctree
docs/_build/doctrees/ref/: index.doctree
docs/_build/doctrees/user_guide/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: getting-started.rst.txt  index.rst.txt
docs/_build/html/_sources/ref/: index.rst.txt
docs/_build/html/_sources/user_guide/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/ref/: index.html
docs/_build/html/user_guide/: index.html
examples/: Pool.py  astar.py  async_test.py  camera_controller.py  flappy.py  frame_counter.py  game_sim.py  main.py  move_mixin.py  platformer.py  platformer_v2.py  pong.py  pygame_test.py  pyglet_circle.py  pyglet_game_test2.py  pyglet_retests.py  pyglet_test.py  pymunk_test.py  simple.py  space_invaders.py  test.py  test_gl.py  utils.py
examples/assets/: CF.tsx  bg_effect.psd  install-avbin-linux-x86-64-v10  laser.aup  map.tmx
examples/assets/laser_data/e08/d08/: e0808126.au
graphics/: animated_sprite.py  animation.py  animator.py  image.py  render_component.py  renderer.py  shapes.py  sprite.py  sprite_renderer.py  tile_renderer.py  tilegrid.py
inputs/: input.py  input_manager.py  keys.py  mouse.py
kge/: __init__.py  engine.py
kge/audio/: audio_manager.py  audio_source.py  sound.py
kge/clocks/: updater.py
kge/core/: behavior_manager.py  behaviour.py  camera.py  color.py  component.py  component_system.py  constants.py  entity.py  entity_manager.py  event_dispatcher.py  eventlib.py  events.py  logger.py  scene.py  service.py  service_provider.py  system.py  transform.py
kge/examples/: pong.py  space_invaders.py
kge/extra/darwin_arm64/Box2D/: Box2D.py  __init__.py
kge/extra/linux64/Box2D/: Box2D.py
kge/extra/win32/Box2D/: _Box2D.cp37-win32.pyd  __init__.py
kge/extra/win64/Box2D/: _Box2D.cp37-win_amd64.pyd
kge/graphics/: anim_system.py  animated_sprite.py  animation.py  animator.py  image.py  render_component.py  renderer.py  shapes.py  sprite.py  sprite_renderer.py  tile_renderer.py  tilegrid.py  z_sprite.py
kge/graphics/low_level/: __init__.py
kge/inputs/: input_manager.py  mouse.py
kge/physics/: colliders.py  events.py  fixed_updater.py  joints.py  physics_manager.py  rigid_body.py
kge/resources/: vfs.py
kge/ui/: button.py  canvas.py  canvas_renderer.py  font.py  gui_renderer.py  panel.py  text.py  text_.py  ui_element.py  ui_manager.py
kge/utils/: classproperty.py  color.py  condition.py  coroutines.py  gendocs.py  spatial_hash.py  vector.py  wait_for_seconds.py
physics/: colliders.py  events.py  fixed_updater.py  joints.py  physics_manager.py  rigid_body.py
physics/Box2D/: _Box2D.cp37-win_amd64.pyd  _Box2D.py
resources/: assetlib.py  events.py  vfs.py
tests/: test_animations.py  test_animator.py  test_engine.py
ui/: button.py  gui_renderer.py  text.py
utils/: coroutines.py  dotted_dict.py  spatial_hash.py  spatial_hash2.py  time_utils.py  timer.py  vector.py
